@@ -6,15 +6,17 @@
 
     <groupId>com.github.idelstak</groupId>
     <artifactId>myrss</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-alpha1.0</version>
     <name>myrss</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>22</java.version>
         <junit.version>5.10.0</junit.version>
         <javafx.version>23-ea+22</javafx.version>
         <testfx.version>4.0.18</testfx.version>
         <ikonli.version>12.3.1</ikonli.version>
+        <os.detected.name>generic</os.detected.name>
     </properties>
 
     <dependencies>
@@ -32,22 +34,6 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
             <version>${javafx.version}</version>
-        </dependency>
-<!--         <dependency> -->
-<!--             <groupId>org.controlsfx</groupId> -->
-<!--             <artifactId>controlsfx</artifactId> -->
-<!--             <version>11.1.2</version> -->
-<!--         </dependency> -->
-        <dependency>
-            <groupId>net.synedra</groupId>
-            <artifactId>validatorfx</artifactId>
-            <version>0.4.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
@@ -107,8 +93,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>22</source>
-                    <target>22</target>
+                    <release>${java.version}</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -124,33 +109,70 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.2</version>
                 <configuration>
-                    <argLine>
-                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                        --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
+                    <!-- The 'skip' configuration is set to true
+                    to skip the default JAR creation, as we are
+                    using the assembly plugin to create a custom JAR. -->
+                    <skip>true</skip>
+                    <finalName>${project.artifactId}-${project.version}-${os.detected.name}</finalName>
                 </configuration>
             </plugin>
+
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.7.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.github.idelstak.myrss.launch.MyRssLaunch</mainClass>
+                        </manifest>
+                    </archive>
+                    <!-- This is set to "false" to avoid appending the assembly ID
+                    to the final JAR name. -->
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <finalName>${project.artifactId}-${project.version}-${os.detected.name}</finalName>
+                </configuration>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>com.github.idelstak.myrss/com.github.idelstak.myrss.HelloApplication</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
-                        </configuration>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>linux</id>
+            <properties>
+                <os.detected.name>linux</os.detected.name>
+            </properties>
+        </profile>
+        <profile>
+            <id>macos</id>
+            <properties>
+                <os.detected.name>mac</os.detected.name>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <properties>
+                <os.detected.name>win</os.detected.name>
+            </properties>
+        </profile>
+    </profiles>
 </project>
